--- a/src/frontend/TuneShare/angular.json
+++ b/src/frontend/TuneShare/angular.json
@@ -33,7 +33,9 @@
               "src/styles.scss",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
+            ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
