disabled ssr and fixed mobile navbar

--- a/src/frontend/TuneShare/angular.json
+++ b/src/frontend/TuneShare/angular.json
@@ -34,11 +34,7 @@
               "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": [],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "prerender": false,
           },
           "configurations": {
             "production": {
